syntax = "proto3";

option csharp_namespace = "KarolK72.Utilities.Kali.Library.Protos";

package KarolK72Logging;

service LoggingGRPCServerService{
	rpc EstablishConnection(InitialConnectionRequest) returns (InitialConnectionResponse);
	rpc SendLog(LogRequest) returns (LogResponse);
}

message InitialConnectionRequest{
	string FriendlySourceName = 1;
	string GuidIdentifier = 2;
	int32 InstanceID = 3;
}

message InitialConnectionResponse{
	bool Succesful = 1;
	string Key = 2;
}

message LogRequest{
	string Key = 1;
	int32 LogLevel = 2;
	string Category = 3;
	int32 EventId = 4;
	string EventName = 5;
	string Exception = 6;
	string Scopes = 7;
	string RenderedMessage = 8;
}

message LogResponse{
	bool Succesful = 1;
}